HLS/BatchNorm/solution1/solution1.log
==============================================================
File generated on Tue Oct 15 16:22:44 +0800 2024
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg400-2'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file '../src/BatchNorm/BatchNorm.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from ../src/BatchNorm/BatchNorm.cpp:1:
../src/BatchNorm/BatchNorm.cpp:23:18: error: use of undeclared identifier 'NUM_FEATURES'
    Dtype_t mean[NUM_FEATURES];
                 ^
../src/BatchNorm/BatchNorm.cpp:24:22: error: use of undeclared identifier 'NUM_FEATURES'
    Dtype_t variance[NUM_FEATURES];
                     ^
../src/BatchNorm/BatchNorm.cpp:25:26: error: use of undeclared identifier 'NUM_FEATURES'
    Dtype_t running_mean[NUM_FEATURES] = {0};
                         ^
../src/BatchNorm/BatchNorm.cpp:26:25: error: use of undeclared identifier 'NUM_FEATURES'
    Dtype_t running_var[NUM_FEATURES] = {1};
                        ^
4 errors generated.
==============================================================
File generated on Tue Oct 15 16:24:41 +0800 2024
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.3 (64-bit)
SW Build 2405991 on Thu Dec  6 23:38:27 MST 2018
IP Build 2404404 on Fri Dec  7 01:43:56 MST 2018
Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg400-2'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file '../src/BatchNorm/BatchNorm.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from ../src/BatchNorm/BatchNorm.cpp:1:
../src/BatchNorm/BatchNorm.cpp:22:18: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t mean[num_features];
                 ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:23:22: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t variance[num_features];
                     ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:24:26: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t running_mean[num_features] = {0};
                         ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:25:25: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t running_var[num_features] = {1};
                        ^~~~~~~~~~~~
4 errors generated.
